<package format="2">
  <name>variable_stiffness_plugin</name>
  <version>0.0.0</version>
  <description>The variable_stiffness_plugin package</description>

  <maintainer email="you@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>catkin</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
